# TwentyGamesChallengs

./: .gitignore  .gitmodules
FlappyBird/: FlappyBird.sln
FlappyBird/FlappyBird/: FlappyBird.cs  FlappyBird.csproj  Program.cs
FlappyBird/FlappyBird/Components/: Background.cs
FlappyBird/FlappyBird/Game/: FlappyBird.cs
FlappyBird/FlappyBird/Physics/: Body.cs  CollisionDetection.cs  Contact.cs  Extensions.cs  Force.cs  Particle.cs
FlappyBird/FlappyBird/Physics/Shapes/: BoxShape.cs  CircleShape.cs  PolygonShape.cs  Shape.cs
FlappyBird/FlappyBird/Render/: ResolutionIndependentRenderer.cs
FlappyBird/FlappyBird/Scenes/: Title.cs
FlappyBird/FlappyBird/Screens/: ScreenName.cs  Title.cs
FlappyBird/FlappyBird/Utilities/: FpsCounter.cs
FlappyBirdUnity/Assets/Prefabs/: Obstacle.prefab
FlappyBirdUnity/Assets/Scenes/: Game.unity
FlappyBirdUnity/Assets/Scripts/: CameraLetterBox.cs  GameManager.cs  Obstacle.cs  Player.cs
FlappyBirdUnity/Assets/Settings/: InputSystem_Actions.inputactions  UniversalRenderPipelineGlobalSettings.asset
FlappyBirdUnity/Assets/Sprites/: Base.aseprite  Buildings_1image.aseprite  Bush.aseprite  Cool_Floppy.aseprite  Pipe.aseprite
FlappyBirdUnity/Assets/UI/: TitleMenuUI.uxml
FlappyBirdUnity/Assets/UI Toolkit/: PanelSettings.asset
FlappyBirdUnity/ProjectSettings/: EditorSettings.asset  ProjectSettings.asset
FlappyBirdUnity/UIElementsSchema/: UIElements.xsd  UnityEngine.UIElements.xsd
Pong/: CMakeLists.txt  session.vim
Pong/assets/fonts/: license.txt  readme.txt
Pong/include/: Entity.hpp  Game.hpp
Pong/shaders/: default.frag  default.vert  default330.vert  text.frag  text.vert  text330.frag  text330.vert
Pong/src/: Entity.cpp  Game.cpp  pong.cpp
libs/fnalibs/lib64/: libFNA3D.so.0  libSDL3.so.0
libs/fnalibs/libaarch64/: libFAudio.so.0  libFNA3D.so.0  libSDL3.so.0
